--- a/front-end-dev-book/ottergram/stylesheets/style.css
+++ b/front-end-dev-book/ottergram/stylesheets/style.css
@@ -1,4 +1,15 @@
 @font-face{
+    font-family: 'airstreamregular';
+    src: url('fonts/Airstream-webfont.eot');
+    src: url('fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Airstream-webfont.woff') format('woff'),
+        url('fonts/Airstream-webfont.ttf') format('truetype'),
+        url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face{
     font-family: 'lakeshore';
     src: url('fonts/LAKESHOR-webfont.eot');
     src: url('fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'),
@@ -9,13 +20,30 @@
     font-style: normal;
 }
 
+
+html,body{
+    height: 100%;
+}
+
 body{
+    display: flex;
+    flex-direction: column;
     font-size: 10px;
     background-color: rgb(149, 194, 215);
 }
 
 a[href="#"]{
     text-decoration: none;
+}
+
+.main-header{
+    flex: 0 1 auto;
+}
+
+.main-content{
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .thumbnail-title{
@@ -26,14 +54,43 @@ a[href="#"]{
     color: rgb(202, 238, 255);
     font-size: 18px;
 }
+
 .thumbnail-list{
+    flex: 0 1 auto;
+    order: 2;
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     padding: 0;
+    white-space: nowrap;
+    overflow-x: auto;
 }
 
 .thumbnail-image{
     display: block;
     width: 100%;
+}
+
+.detail-image-container{
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.detail-image-frame{
+    position: relative;
+    text-align: center;
+}
+
+.detail-image-title{
+    position: absolute;
+    bottom: -16px;
+    left: 4px;
+    font-family: airstreamregular;
+    color: white;
+    text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
+    font-size: 40px;
 }
 
 .logo-text{
@@ -45,12 +102,15 @@ a[href="#"]{
 }
 
 .thumbnail-item{
-    display: block;
+    display: inline-block;
+    min-width: 120px;
+    max-width: 120px;
     border: 1px solid rgb(100%, 100%, 100%);
     border: 1px solid rgba(100%, 100%, 100%, 0.8);
 }
 
-.thumbnail-item + .thumbnail-item{
-    margin-top: 10px;
+.detail-image{
+    width: 90%;
 }
+
 
