--- a/front-end-dev-book/ottergram/stylesheets/style.css
+++ b/front-end-dev-book/ottergram/stylesheets/style.css
@@ -113,4 +113,45 @@ a[href="#"]{
     width: 90%;
 }
 
+/* @media all and (min-width: 768px){
+    .main-content{
+        flex-direction: row;
+        overflow: hidden;
+    }
 
+    .thumbnail-list{
+        flex-direction: column;
+        order: 0;
+        margin-left: 20px;
+    }
+
+    .thumbnail-item{
+        max-width: 260px;
+    }
+
+    .thumbnail-item + .thumbnail-item{
+        margin-top: 20px;
+    }
+} */
+
+
+@media screen and (orientation: landscape){
+    .main-content{
+        flex-direction: row;
+        overflow: hidden;
+    }
+
+    .thumbnail-list{
+        flex-direction: column;
+        order: 0;
+        margin-left: 20px;
+    }
+
+    .thumbnail-item{
+        max-width: 260px;
+    }
+
+    .thumbnail-item + .thumbnail-item{
+        margin-top: 20px;
+    }
+} 
